atmos-logo(beta)

--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
 		<title>atmosphere</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+		<link rel="shortcut icon" href="./favicon.ico" type="image/vnd.microsoft.ico"/>
+
+		<!-- atmos fonts -->
+		<link href="css/atmos_font.css" rel="stylesheet">
+
 		<!-- General foundation icon font -->
 		<link href="css/general_foundicons.css" rel="stylesheet">
 
@@ -48,7 +53,7 @@
 			<header class="atmos-header">
 				<nav class="atmos-menu">
 					<ul class="atmos-vmenu">
-					    <li><a href="#" class="icon-logo">Logo</a></li>
+						<li><a href="#" class="icon-logo">Logo</a></li>
 <!--
 						<li><a href="#" class="icon-login"><span>Login<span></a></li>
 -->
